force-app/main/default/objects/Service_Request__c/Service_Request__c.object-meta.xml
<CustomObject>
    <description>Service info</description>
    <label>Service Request</label>
    <nameField>
        <label>Service Request</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>