force-app/main/default/objects/Service_Request__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>Service Request</relationshipLabel>
    <relationshipName>Service_Request</relationshipName>
    <type>Lookup</type>
</CustomField>