force-app/main/default/objects/Service_Request__c/fields/Facilities__c.field-meta.xml
<CustomField>
    <fullName>Facilities__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facilities</label>
    <referenceTo>Facilities__c</referenceTo>
    <relationshipLabel>Service Request</relationshipLabel>
    <relationshipName>Service_Request</relationshipName>
    <type>Lookup</type>
</CustomField>