force-app/main/default/objects/Service_Request__c/fields/Maintenance_Staff__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maintenance Staff</label>
    <referenceTo>Maintenance_Staff__c</referenceTo>
    <relationshipLabel>Service Request</relationshipLabel>
    <relationshipName>Service_Request</relationshipName>
    <type>Lookup</type>
</CustomField>