force-app/main/default/objects/Service_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Request_Name__c</columns>
    <columns>Issue_Type__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>